--- a/pinch/templates/breakdown_mvp.html
+++ b/pinch/templates/breakdown_mvp.html
@@ -9,7 +9,7 @@
         <div class="col-md-8">
           <h1>{% block page_title %}Breakdown MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
   			  <h2><span>"What’s the least we can build?"</span> Now that you have refined your MVP statement, we can identify the major components of what we need to build.  Using the same drag over with your cursor, highlight the logical workstreams in your statement.</h2>
-  			  <span class="label label-warning">Click and Drag to identify workstreams!</span>
+  			  <h3>Click and Drag to <span class="highlight">identify workstreams!</span></h3>
         </div>
         <div class="col-md-3"></div>
       </div>
