--- a/pinch/templates/minify_mvp.html
+++ b/pinch/templates/minify_mvp.html
@@ -12,7 +12,7 @@
       <div class="col-md-8">
           <h1>{% block page_title %}Minify MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
 		  <h2><span>"The MVP you need."</span> If we don’t need something to say we have a product, let’s cut it out.  Let’s make some hard choices here as you read through your MVP statement.</h2>
-		  <span class="label label-warning">Click and Drag to cut scope!</span>
+		  <h3>Click and Drag to <span class="strikethrough">cut scope!</span></h3>
       </div>
 
       <div class="col-md-3"></div>
