--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -1,7 +1,7 @@
 /* line 5, sass/_gravity_board.scss */
 #gravity-board {
   border-top: 1px solid #dddfe0;
-  top: 50px;
+  top: 90px;
   right: 0;
   bottom: 0;
   left: 0;
@@ -7911,13 +7911,18 @@ body.breakdown-mvp .steps .breakdown-mvp {
   font-weight: bold;
 }
 
-/* line 128, sass/pinch.scss */
+/* line 123, sass/pinch.scss */
+body.gravity-board .steps .gravity-board {
+  font-weight: bold;
+}
+
+/* line 130, sass/pinch.scss */
 html {
   position: relative;
   min-height: 100%;
 }
 
-/* line 133, sass/pinch.scss */
+/* line 135, sass/pinch.scss */
 body {
   background: #f8f7f7;
   color: #333333;
@@ -7927,7 +7932,7 @@ body {
   margin-bottom: 110px;
 }
 
-/* line 142, sass/pinch.scss */
+/* line 144, sass/pinch.scss */
 #footer {
   position: absolute;
   bottom: 0;
@@ -7940,22 +7945,22 @@ body {
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #EEE;
 }
-/* line 153, sass/pinch.scss */
+/* line 155, sass/pinch.scss */
 #footer img {
   margin: 5px 15px 5px 5px;
 }
 
-/* line 156, sass/pinch.scss */
+/* line 158, sass/pinch.scss */
 body.home .steps {
   display: none;
 }
 
-/* line 157, sass/pinch.scss */
-body.gravity-board #footer, body.gravity-board .steps {
-  display: none;
+/* line 159, sass/pinch.scss */
+body.gravity-board #footer {
+  display: none !important;
 }
 
-/* line 159, sass/pinch.scss */
+/* line 161, sass/pinch.scss */
 .clear {
   clear: both;
   height: 0px;
@@ -7963,7 +7968,7 @@ body.gravity-board #footer, body.gravity-board .steps {
   font-size: 0px;
 }
 
-/* line 160, sass/pinch.scss */
+/* line 162, sass/pinch.scss */
 .strikethrough {
   text-decoration: line-through;
   padding: 2px 4px;
@@ -7973,17 +7978,17 @@ body.gravity-board #footer, body.gravity-board .steps {
   border-radius: 4px;
 }
 
-/* line 168, sass/pinch.scss */
+/* line 170, sass/pinch.scss */
 .highlight {
   background-color: yellow;
 }
 
-/* line 171, sass/pinch.scss */
+/* line 173, sass/pinch.scss */
 .center {
   text-align: center;
 }
 
-/* line 173, sass/pinch.scss */
+/* line 175, sass/pinch.scss */
 .create-button {
   background-color: #AAA;
   border-top: none;
@@ -7997,23 +8002,23 @@ body.gravity-board #footer, body.gravity-board .steps {
   padding: 5px 15px;
 }
 
-/* line 185, sass/pinch.scss */
+/* line 187, sass/pinch.scss */
 .create-button:hover {
   background-color: #f8bf51;
   color: #FFF;
   text-decoration: none;
 }
 
-/* line 197, sass/pinch.scss */
+/* line 199, sass/pinch.scss */
 h1 {
   font-weight: 300;
 }
-/* line 199, sass/pinch.scss */
+/* line 201, sass/pinch.scss */
 h1 span {
   font-size: .4em;
 }
 
-/* line 202, sass/pinch.scss */
+/* line 204, sass/pinch.scss */
 h2 {
   font-size: 1.5em;
   font-style: italic;
@@ -8021,51 +8026,51 @@ h2 {
   margin-top: 5px;
   margin-bottom: 30px;
 }
-/* line 203, sass/pinch.scss */
+/* line 205, sass/pinch.scss */
 h2 span {
   font-weight: normal;
 }
 
-/* line 207, sass/pinch.scss */
+/* line 209, sass/pinch.scss */
 .minify-mvp h3, .breakdown-mvp h3 {
   background-color: #feebc5;
   display: inline-block;
   font-weight: bold;
 }
 
-/* line 216, sass/pinch.scss */
+/* line 218, sass/pinch.scss */
 form label {
   font-weight: 300;
 }
-/* line 217, sass/pinch.scss */
+/* line 219, sass/pinch.scss */
 form input[type="text"], form textarea.form-control {
   border: 1px solid #dddfe0;
   border-radius: 0;
   box-shadow: none;
   font-size: 21px;
 }
-/* line 223, sass/pinch.scss */
+/* line 225, sass/pinch.scss */
 form input[type="text"].form-control {
   height: 50px;
 }
-/* line 226, sass/pinch.scss */
+/* line 228, sass/pinch.scss */
 form textarea.form-control {
   padding: 10px 15px;
   height: 10em;
 }
-/* line 230, sass/pinch.scss */
+/* line 232, sass/pinch.scss */
 form .codeholder {
   background: #f8f7f7;
   border: none;
   padding: 0;
   margin-bottom: 15px;
 }
-/* line 232, sass/pinch.scss */
+/* line 234, sass/pinch.scss */
 form .CodeMirror-code pre {
   font-size: 30px;
 }
 
-/* line 238, sass/pinch.scss */
+/* line 240, sass/pinch.scss */
 button[type="submit"] {
   background-color: #f8bf51;
   border-top: none;
@@ -8078,12 +8083,12 @@ button[type="submit"] {
   font-weight: 300;
   margin-bottom: 40px;
 }
-/* line 249, sass/pinch.scss */
+/* line 251, sass/pinch.scss */
 button[type="submit"].btn {
   border-radius: 0;
 }
 
-/* line 262, sass/pinch.scss */
+/* line 264, sass/pinch.scss */
 .step-icon div.big-idea {
   background: url("/static/images/icon-big-idea.png") no-repeat 0 0;
   width: 64px;
@@ -8101,20 +8106,20 @@ button[type="submit"].btn {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 262, sass/pinch.scss */
+  /* line 264, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 262, sass/pinch.scss */
+  /* line 264, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
-/* line 271, sass/pinch.scss */
+/* line 273, sass/pinch.scss */
 .step-icon div.create-project {
   background: url("/static/images/create-project.png") no-repeat 0 0;
   width: 64px;
@@ -8132,20 +8137,20 @@ button[type="submit"].btn {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 271, sass/pinch.scss */
+  /* line 273, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 271, sass/pinch.scss */
+  /* line 273, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
-/* line 280, sass/pinch.scss */
+/* line 282, sass/pinch.scss */
 .step-icon div.validate {
   background: url("/static/images/validate.png") no-repeat 0 0;
   width: 64px;
@@ -8163,20 +8168,20 @@ button[type="submit"].btn {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 280, sass/pinch.scss */
+  /* line 282, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 280, sass/pinch.scss */
+  /* line 282, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
-/* line 289, sass/pinch.scss */
+/* line 291, sass/pinch.scss */
 .step-icon div.create-mvp {
   background: url("/static/images/icon-create-mvp.png") no-repeat 0 0;
   width: 64px;
@@ -8194,20 +8199,20 @@ button[type="submit"].btn {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 289, sass/pinch.scss */
+  /* line 291, sass/pinch.scss */
   .step-icon div.create-mvp {
     background: url("/static/images/icon-create-mvp@2x.png");
     background-size: 64px 46px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 289, sass/pinch.scss */
+  /* line 291, sass/pinch.scss */
   .step-icon div.create-mvp {
     background: url("/static/images/icon-create-mvp@2x.png");
     background-size: 64px 46px;
   }
 }
-/* line 298, sass/pinch.scss */
+/* line 300, sass/pinch.scss */
 .step-icon div.minify-mvp {
   background: url("/static/images/icon-minify-mvp.png") no-repeat 0 0;
   width: 64px;
@@ -8225,20 +8230,20 @@ button[type="submit"].btn {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 298, sass/pinch.scss */
+  /* line 300, sass/pinch.scss */
   .step-icon div.minify-mvp {
     background: url("/static/images/icon-minify-mvp@2x.png");
     background-size: 64px 42px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 298, sass/pinch.scss */
+  /* line 300, sass/pinch.scss */
   .step-icon div.minify-mvp {
     background: url("/static/images/icon-minify-mvp@2x.png");
     background-size: 64px 42px;
   }
 }
-/* line 307, sass/pinch.scss */
+/* line 309, sass/pinch.scss */
 .step-icon div.breakdown-mvp {
   background: url("/static/images/icon-breakdown-mvp.png") no-repeat 0 0;
   width: 64px;
@@ -8256,36 +8261,36 @@ button[type="submit"].btn {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 307, sass/pinch.scss */
+  /* line 309, sass/pinch.scss */
   .step-icon div.breakdown-mvp {
     background: url("/static/images/icon-breakdown-mvp@2x.png");
     background-size: 64px 47px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 307, sass/pinch.scss */
+  /* line 309, sass/pinch.scss */
   .step-icon div.breakdown-mvp {
     background: url("/static/images/icon-breakdown-mvp@2x.png");
     background-size: 64px 47px;
   }
 }
 
-/* line 325, sass/pinch.scss */
+/* line 327, sass/pinch.scss */
 .info-panel {
   background-color: #feebc5;
   font-size: 16px;
   padding: 15px;
 }
-/* line 329, sass/pinch.scss */
+/* line 331, sass/pinch.scss */
 .info-panel h3 {
   padding-top: 0px;
   margin-top: 0px;
 }
-/* line 330, sass/pinch.scss */
+/* line 332, sass/pinch.scss */
 .info-panel p {
   margin-bottom: 5px;
 }
-/* line 331, sass/pinch.scss */
+/* line 333, sass/pinch.scss */
 .info-panel p.example {
   font-size: 12px;
   font-style: italic;
@@ -8293,19 +8298,19 @@ button[type="submit"].btn {
   line-height: 14px;
   margin-bottom: 15px;
 }
-/* line 332, sass/pinch.scss */
+/* line 334, sass/pinch.scss */
 .info-panel .strike {
   text-decoration: line-through;
   padding: 2px;
 }
 
-/* line 341, sass/pinch.scss */
+/* line 343, sass/pinch.scss */
 .venn {
   background: url("/static/images/venn-diagram.png") no-repeat center 0;
   background-size: contain;
   min-height: 800px;
 }
-/* line 345, sass/pinch.scss */
+/* line 347, sass/pinch.scss */
 .venn textarea {
   background: transparent;
   border: none;
@@ -8319,44 +8324,44 @@ button[type="submit"].btn {
   vertical-align: bottom;
   width: 100%;
 }
-/* line 357, sass/pinch.scss */
+/* line 359, sass/pinch.scss */
 .venn textarea:focus {
   outline: none;
 }
-/* line 360, sass/pinch.scss */
+/* line 362, sass/pinch.scss */
 .venn textarea#offering {
   padding-left: 30px;
 }
-/* line 361, sass/pinch.scss */
+/* line 363, sass/pinch.scss */
 .venn textarea#valueProp {
   padding-right: 30px;
   padding-left: 30px;
 }
-/* line 362, sass/pinch.scss */
+/* line 364, sass/pinch.scss */
 .venn textarea#customer {
   padding-right: 30px;
 }
 @media only screen and (max-width: 1200px) {
-  /* line 366, sass/pinch.scss */
+  /* line 368, sass/pinch.scss */
   .venn textarea {
     margin-top: 90px;
     height: 245px;
   }
 }
 @media only screen and (max-width: 990px) {
-  /* line 372, sass/pinch.scss */
+  /* line 374, sass/pinch.scss */
   .venn textarea {
     height: 300px;
     margin-top: 115px;
   }
-  /* line 376, sass/pinch.scss */
+  /* line 378, sass/pinch.scss */
   .venn .form-group.col-md-4 {
     float: left;
     width: 33%;
   }
 }
 @media only screen and (max-width: 650px) {
-  /* line 382, sass/pinch.scss */
+  /* line 384, sass/pinch.scss */
   .venn textarea {
     font-size: 18px;
     margin-top: 90px;
@@ -8364,7 +8369,7 @@ button[type="submit"].btn {
   }
 }
 @media only screen and (max-width: 530px) {
-  /* line 389, sass/pinch.scss */
+  /* line 391, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 75px;
@@ -8372,14 +8377,14 @@ button[type="submit"].btn {
   }
 }
 @media only screen and (max-width: 500px) {
-  /* line 396, sass/pinch.scss */
+  /* line 398, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 55px;
     height: 160px;
   }
 }
-/* line 402, sass/pinch.scss */
+/* line 404, sass/pinch.scss */
 .venn .validate-action {
   margin-top: 100px;
 }
