--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -27,6 +27,9 @@
             {% csrf_token %}
             <div class="form-group">
               <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Your great project name">
+              <input type="text" class="form-control" name="event" id="event" placeholder="Is your project part of an event?" value="{{ event_default }}">
+              <input type="text" class="form-control" name="ownerName" id="ownerName" placeholder="Your name">
+              <input type="email" class="form-control" name="ownerEmail" id="ownerEmail" placeholder="Your email address">
             </div>
             <div class="clearfix">
               <button type="submit" class="btn btn-default square">get started</button>
