--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -30,6 +30,13 @@
               <input type="text" class="form-control" name="event" id="event" placeholder="Is your project part of an event?" value="{{ event_default }}">
               <input type="text" class="form-control" name="ownerName" id="ownerName" placeholder="Your name">
               <input type="email" class="form-control" name="ownerEmail" id="ownerEmail" placeholder="Your email address">
+
+              <input type="text" class="form-control" name="memberName" id="memberName0" placeholder="Member 0 name">
+              <input type="email" class="form-control" name="memberEmail" id="memberEmail0" placeholder="Member 0 email address">
+              <input type="text" class="form-control" name="memberName" id="memberName1" placeholder="Member 1 name">
+              <input type="email" class="form-control" name="memberEmail" id="memberEmail1" placeholder="Member 1 email address">
+              <input type="text" class="form-control" name="memberName" id="memberName2" placeholder="Member 2 name">
+              <input type="email" class="form-control" name="memberEmail" id="memberEmail2" placeholder="Member 2 email address">
             </div>
             <div class="clearfix">
               <button type="submit" class="btn btn-default square">get started</button>
