Your great project name.

--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -26,7 +26,7 @@
           <form role="form" method="post">
             {% csrf_token %}
             <div class="form-group">
-              <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Acme Enterprises">
+              <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Your great project name">
               <label>Event name</label>
               <input type="text" class="form-control" name="event" id="event" placeholder="Is your project part of an event?" value="{{ event_default }}">
               <label>Your name</label>
