Add modal to gravity board on load. #12

--- a/pinch/static/css/sass/_gravity_board.scss
+++ b/pinch/static/css/sass/_gravity_board.scss
@@ -23,6 +23,14 @@
 			h3 {
 				margin:0;
 				padding:0;
+				a {
+					background-color:#333;
+					color:#fff;
+					display:inline-block;
+					border-radius:100px;
+					font-size:15px;
+					padding:0 5px 0 5px;
+				}
 			}
 		}
 		.task-columns {
