--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -27,35 +27,44 @@
   margin: 0;
   padding: 0;
 }
-/* line 28, sass/_gravity_board.scss */
+/* line 26, sass/_gravity_board.scss */
+#gravity-board .lane .header h3 a {
+  background-color: #333;
+  color: #fff;
+  display: inline-block;
+  border-radius: 100px;
+  font-size: 15px;
+  padding: 0 5px 0 5px;
+}
+/* line 36, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns {
   margin: 0;
   padding: 0 10px;
 }
-/* line 31, sass/_gravity_board.scss */
+/* line 39, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns .drag_list {
   list-style-type: none;
   padding: 0;
   min-width: 100px;
   min-height: 75px;
 }
-/* line 37, sass/_gravity_board.scss */
+/* line 45, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li {
   border-left: 1px solid #dddfe0;
   display: table-cell;
   padding: 10px 0;
   width: 350px;
 }
-/* line 42, sass/_gravity_board.scss */
+/* line 50, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li:first-child {
   border-left: 0;
 }
-/* line 43, sass/_gravity_board.scss */
+/* line 51, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li .task-header {
   padding: 5px;
   text-transform: uppercase;
 }
-/* line 46, sass/_gravity_board.scss */
+/* line 54, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li .task-header button {
   background-color: #f8bf51;
   border: 0;
@@ -66,13 +75,13 @@
   padding: 3px 8px;
   margin-right: 10px;
 }
-/* line 56, sass/_gravity_board.scss */
+/* line 64, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li .task-header h4 {
   display: inline-block;
   margin: 0;
   padding: 2px 0 0 0;
 }
-/* line 62, sass/_gravity_board.scss */
+/* line 70, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li .ticket {
   background: url("/static/images/page-curl.png") no-repeat right bottom;
   background-color: #feebc5;
@@ -96,7 +105,7 @@
   height: 75px;
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 62, sass/_gravity_board.scss */
+  /* line 70, sass/_gravity_board.scss */
   #gravity-board .lane .task-columns > li .ticket {
     background: url("/static/images/page-curl@2x.png") no-repeat bottom right;
     background-size: 13px 12px;
@@ -104,18 +113,18 @@
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 62, sass/_gravity_board.scss */
+  /* line 70, sass/_gravity_board.scss */
   #gravity-board .lane .task-columns > li .ticket {
     background: url("/static/images/page-curl@2x.png") no-repeat bottom right;
     background-size: 13px 12px;
     background-color: #feebc5;
   }
 }
-/* line 77, sass/_gravity_board.scss */
+/* line 85, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li .ticket:hover .trash {
   display: block;
 }
-/* line 80, sass/_gravity_board.scss */
+/* line 88, sass/_gravity_board.scss */
 #gravity-board .lane .task-columns > li .ticket .trash {
   background-color: #f6b1ae;
   border-radius: 100px;
@@ -128,17 +137,17 @@
   text-align: center;
 }
 @media only screen and (max-width: 700px) {
-  /* line 94, sass/_gravity_board.scss */
+  /* line 102, sass/_gravity_board.scss */
   #gravity-board .lane .task-columns > li {
     display: block;
   }
 }
 
-/* line 100, sass/_gravity_board.scss */
+/* line 108, sass/_gravity_board.scss */
 .modal-dialog {
   left: 0 !important;
 }
-/* line 102, sass/_gravity_board.scss */
+/* line 110, sass/_gravity_board.scss */
 .modal-dialog .ticket-input {
   font-size: 21px;
   padding: 10px 5px;
