--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -103,7 +103,9 @@
         <h4>Gravity Board</h4>
       </div>
       <div class="modal-body">
-        <p>Some content here explaining the Gravity Board.</p>
+        <p>Now that you've broken your MVP into workstreams, it's time to identify the necessary tasks needed to deliver each individual workstream. Click on the "+" button at the top of each workstream column, and add the general tasks your team agrees need to take place to get that done.</p>
+        <p>Once you've identified the tasks, be sure to challenge each task on the board for its necessary towards your minified MVP. If you don't have complete a task to deliver, then that task should come off the board now and not be done as part of your build.</p>
+        <button type="submit" class="btn btn-default ready" data-dismiss="modal" aria-label="Close">I'm ready</button>
       </div>
     </div>
   </div>
